# hir

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.txt
include/: Defs.hh
include/codegen/: ICodegen.hh
include/codegen/platform/: MacArm64.hh
include/err/: ErrorCodes.hh
include/node/: Node.hh  NodeKind.hh
include/parse/: Lex.hh  Parse.hh
include/token/: Token.hh  TokenKind.hh
spec/: test.hir
src/: Main.cc
src/codegen/: ICodegen.cc  MacArm64CodeGen.cc
src/node/: Node.cc  NodeKind.cc
src/parse/: Lex.cc  Parse.cc
src/token/: Token.cc  TokenKind.cc
tests/: test.hir
